projects/compiler/test/typechecker/invocation/error_macro_output_invalid.out
Error at %FILE_NAME%:6:17
Illegal operator
  |  val x = valid() + true
                     ^
No operator '+' exists between types Int and Bool
