projects/compiler/test/typechecker/invocation/error_macro_output_invalid.abra
import macro, InjectedCode from "meta"

@macro
func valid(): InjectedCode = InjectedCode.new().append("123")

val x = valid() + true
